--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "my-app",
   "version": "0.0.0",
@@ -19,7 +18,9 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@canvasjs/angular-charts": "^1.0.3",
     "bootstrap": "^5.3.1",
+    "canvasjs": "^1.8.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
